# cap6665-project-1

./: .gitignore  COLAB_UPLOAD_SETUP.md  README.md  pyproject.toml  run_demo.bat  run_demo.sh
configs/: dataset_detection.yaml  dataset_segmentation.yaml  demo.yaml  pipeline.yaml  train_yolo26m_detection.yaml  train_yolo26m_segmentation.yaml
data/: download.py
demo/: app.py  components.py
models/ocr/PP-OCRv6_medium_rec_safetensors/: README.md  config.json  preprocessor_config.json
notebooks/: colab_training.ipynb  demo.ipynb
report/: final_project_report.tex
scripts/: convert_coco_to_yolo_detection.py  convert_coco_to_yolo_segmentation.py  csv_to_tensorboard.py  evaluate.py  infer_layout.py  reconstruct_markdown.py  run_demo.py  run_ocr.py  run_pipeline.py  run_tensorboard.py  sitecustomize.py  train_yolo_detection.py  train_yolo_segmentation.py
src/docmd/: __init__.py  pipeline.py  schema.py
src/docmd/dataset/: coco_to_yolo.py
src/docmd/demo/: __init__.py  runtime.py
src/docmd/detection/: __init__.py  infer.py  train.py
src/docmd/evaluation/: metrics.py
src/docmd/markdown/: __init__.py  render.py
src/docmd/ocr/: __init__.py  backends.py  extract.py
src/docmd/ordering/: __init__.py  spatial.py
src/docmd/utils/: images.py  io.py
src/docmd/visualization/: draw.py
